# gradprogram2021

./: .gitignore  README.md
src/Chironix_GC/husky/husky_gazebo/: package.xml
src/Chironix_GC/labworld/: CMakeLists.txt
src/Chironix_GC/labworld/worlds/: chironix.world
src/Chironix_GC/scout/scout_navigation/: package.xml
src/finders_keepers/: CMakeLists.txt  package.xml
src/finders_keepers/launch/: finders_keepers.launch  odom_nav_map.launch  user_control.launch
src/finders_keepers/launch/include/: explore_find.launch  gmapping.launch  odom_nav.launch
src/finders_keepers/msg/: ctrl_msg.msg  frontier_msg.msg  tag_msg.msg
src/finders_keepers/params/without_map_params/: amcl_params.yaml  common_costmap_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  gmapping_params.yaml  local_planner_params.yaml  move_base_params.yaml
src/finders_keepers/src/: Greedy_Best_First_Search.py  apriltag_detection.py  explore_find.py  frontiers_finder.py  move_robot.py  user_control.py
src/scout_mini_ros/jackal/jackal_description/: package.xml
src/scout_mini_ros/labworld/: package.xml
src/scout_mini_ros/labworld/launch/: fullWorld.launch  liteWorld.launch
src/scout_mini_ros/labworld/scripts/: clean_mesh.py
src/scout_mini_ros/labworld/worlds/: chironix.world  empty.world  lite_chironix.world  test.world
src/scout_mini_ros/realsense2_description/launch/: view_t265_model_rviz_gazebo.launch
src/solutions/: #package.xml#  CMakeLists.txt  package.xml
src/solutions/launch/: scout_explore.launch  scout_init.launch  scout_solution.launch
(+254 files in other folders)
